--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,12 @@
         "src":"./index.js",
         "use":"@vercel/node"
        }
+    ],
+    "routers":[
+       {
+        "src":"/(.*)",
+        "dest":"/index.js"
+       } 
     ]
 
 }
