--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,9 @@
     "version":2,
     "builds":[{
         "src":"./index.js",
-        "use":"@vercel/node"
+        "use":"@now/node-server"
        }
-    ],
-    "routers":[
-       {
-        "src":"/(.*)",
-        "dest":"/index.js"
-       } 
     ]
+    
 
 }
